# mentoringCpp

./: CMakeLists.txt
array_exercise/: CMakeLists.txt  array_exercise.cpp
array_multiplication_table/: CMakeLists.txt  array_multiplication_table.cpp
calculator/: CMakeLists.txt
calculator/CalculatorApp/: CMakeLists.txt  calculator.cpp
calculator/DisplayCalculator/: CMakeLists.txt  display_cal.cpp  display_cal.hpp
calculator/UnitTests/: CMakeLists.txt  cal_class_test.cpp
calculator/cal_class/: CMakeLists.txt  calculator.cpp  calculator.hpp
calculator/cal_display/: CMakeLists.txt  cal_display.cpp  cal_display.hpp
calculator/calculator_main/: CMakeLists.txt  calculator.cpp  main.cpp
calculator/src/: CMakeLists.txt  calculator.cpp
calculator/unit_tests/: CMakeLists.txt  cal_class_test.cpp
collatz_conjecture/: CMakeLists.txt  collatz_conjecture.cpp
collatz_conjecture_2/: CMakeLists.txt  collatz_conjecture_2.cpp
display_cpp_ver/: CMakeLists.txt  display_cpp_ver.cpp
for_exercise/: CMakeLists.txt  for_exercise.cpp
optional_type_example/: CMakeLists.txt  optional_type_example.cpp
pseudo_calculator_1/: CMakeLists.txt  pseudo_calculator_1.cpp
pseudo_calculator_2/: CMakeLists.txt  pseudo_calculator_2.cpp
src/: CMakeLists.txt  main.cpp
variant_type_example/: CMakeLists.txt  variant_type_example.cpp
